--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -11,11 +11,12 @@
           <th>Client Type</th>
           <th class="no-search">Active Jobs</th>
           <th class="no-search">Last Backup</th>
-          <th class="no-search">FileRetention (days)</th>
-          <th class="no-search">JobRetention (days)</th>
+          <th class="no-search">File Ret. (days)</th>
+          <th class="no-search">Job Ret. (days)</th>
           <th class="no-search">Space Used</th>
+          <th class="no-search">Quota</th>
           <th class="no-search">Space Used %</th>
-          <th class="no-search">File count</th>
+          <th class="no-search">Files</th>
           <th class="neither-search-nor-order">AutoPrune</th>
         </tr>
       </thead>
