--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -12,11 +12,12 @@
         <th>Uname</th>
         <th>Active Jobs</th>
         <th>Last Backup</th>
-        <th>FileRetention (days)</th>
-        <th>JobRetention (days)</th>
+        <th>File Ret. (days)</th>
+        <th>Job Ret. (days)</th>
         <th>Space Used</th>
+        <th>Quota</th>
         <th>Space Used %</th>
-        <th>File count</th>
+        <th>Files</th>
         <th>AutoPrune</th>
       </tr>
     </thead>
