--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -21,22 +21,37 @@
           <%= content_tag(:li, active_class(clients_path, true)) do %>
             <%= link_to 'Clients', clients_path %>
           <% end %>
-          <li><%= link_to current_user.username, '#' %></li>
         <% end %>
         <%= content_tag(:li, active_class(faq_path)) do %>
           <%= link_to 'FAQ', faq_path %>
         <% end %>
       </ul>
+
       <% if current_user %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to logout_path do %>
-              <label class="glyphicon glyphicon-log-out"></label>
-              Logout
+            <%= link_to '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+              <label class="glyphicon glyphicon-user"></label>
+              <%= current_user.username %><span class="caret"></span>
             <% end %>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to user_path(current_user) do %>
+                  <label class="glyphicon glyphicon-wrench"></label>
+                  Info
+                <% end %>
+              </li>
+              <li>
+                <%= link_to logout_path do %>
+                  <label class="glyphicon glyphicon-log-out"></label>
+                  Logout
+                <% end %>
+              </li>
+            </ul>
           </li>
         </ul>
       <% end %>
+
       <%= render partial: 'shared/admin' if current_user.try(:admin?) %>
     </div><!--/.nav-collapse -->
   </div>
