Users marked as moderators can access the admin pages.

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -52,7 +52,7 @@
         </ul>
       <% end %>
 
-      <%= render partial: 'shared/admin' if current_user.try(:admin?) %>
+      <%= render partial: 'shared/admin' if current_user.try(:has_admin_access?) %>
     </div><!--/.nav-collapse -->
   </div>
 </nav>
