--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -22,6 +22,7 @@
             <th>Clients</th>
             <th>Unverified hosts</th>
             <th>Pending hosts</th>
+            <th>Admin</th>
             <th>Actions</th>
             <th>Ban</th>
           </tr>
