Show jobs from all clients in admin's index

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -10,3 +10,5 @@
 <br />
 
 <%= render partial: 'clients/client_graphs', locals: { path: admin_path } %>
+
+<%= render partial: 'admin/jobs/jobs' %>
