--- a/app/views/admin/jobs/_recent_job.html.erb
+++ b/app/views/admin/jobs/_recent_job.html.erb
@@ -1,7 +1,7 @@
 <tr class="<%= success_class(recent_job.job_status) %>">
   <td><%= recent_job.name %></td>
   <td><%= recent_job.client.name %></td>
-  <td><%= recent_job.job_id %></td>
+  <td><%= link_to recent_job.job_id, logs_admin_client_path(recent_job.client) %></td>
   <td><%= recent_job.level_human %></td>
   <td><%= recent_job.fileset %></td>
   <td><%= recent_job.start_time_formatted %></td>
