--- a/app/views/admin/jobs/_recent_jobs.html.erb
+++ b/app/views/admin/jobs/_recent_jobs.html.erb
@@ -1,21 +1,21 @@
 <div class="col-xs-12">
   <div class="table-responsive">
-    <table class="table table-striped table-bordered table-condensed">
+    <table id="admin_jobs" class="table table-striped table-bordered table-condensed">
       <thead>
         <tr>
           <th>Name</th>
           <th>Client</th>
           <th>JobId</th>
-          <th>Level</th>
-          <th>Fileset</th>
-          <th>Started At</th>
-          <th>Finished At</th>
-          <th>Duration</th>
-          <th>Bytes</th>
-          <th>Files</th>
-          <th>Status</th>
-          <th>Encryption</th>
-          <th>Compression</th>
+          <th class="no-search">Level</th>
+          <th class="no-search">Fileset</th>
+          <th class="no-search">Started At</th>
+          <th class="no-search">Finished At</th>
+          <th class="no-search">Duration</th>
+          <th class="no-search">Bytes</th>
+          <th class="no-search">Files</th>
+          <th class="no-search">Status</th>
+          <th class="no-search">Encryption</th>
+          <th class="no-search">Compression</th>
         </tr>
       </thead>
       <tbody>
