--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,56 +1,20 @@
 <%= notifier(@host.display_message) unless @host.deployed? %>
 
-<div class="row right">
-  <% if @host.can_be_disabled? %>
-    <%= link_to 'Disable client', disable_host_path(@host), method: :post,
-      data: { confirm: 'This will disable the client. Are you sure?' },
-      class: "btn btn-warning", role: "button" %>
-  <% end %>
-
-  <%= link_to 'Remove client', host_path(@host), method: :delete,
-    data: { confirm: 'This will remove the client from Bacula. Are you sure?' },
-    class: "btn btn-danger", role: "button" %>
-</div>
-
-<h2>Configuration for <%= @host.name %>
-  <small><%= host_status_label(@host) %></small>
-</h2>
-
-<br/>
+<%= render partial: 'header' %>
 
 <div class="row">
-  <div class="col-xs-4">
-    <h3>Host Details</h3>
-  </div>
-  <div class="col-xs-6">
-    <h3>Jobs</h3>
+  <div id='host-tabs' class='tab-content'>
+    <div role="tabpanel" class="tab-pane active" id="details">
+      <%= render partial: "host_details" %>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="jobs">
+      <%= render partial: "jobs/job_templates" %>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="fd-config">
+      <%= render partial: "fd_config" %>
+    </div>
   </div>
 </div>
-<div class="row">
-  <%= render partial: "host_details" %>
-  <%= render partial: "jobs/job_templates" %>
-</div>
 
-  <div class="row">
-    <div class="col-xs-4">
-      <h3>Client FileDeamon Config</h3>
-      <pre class="pre">
-<%= @host.bacula_fd_filedeamon_config %>
-      </pre>
-    </div>
-    <div class="col-xs-4">
-      <h3>Client Director Config</h3>
-      <pre class="pre">
-<%= @host.bacula_fd_director_config %>
-      </pre>
-    </div>
-    <div class="col-xs-4">
-      <h3>Client Messages Config</h3>
-      <pre class="pre">
-<%= @host.bacula_fd_messages_config %>
-      </pre>
-    </div>
-
-  </div>
 
 <%= render partial: 'jobs/modals' %>
