--- a/app/views/hosts/_fd_config.html.erb
+++ b/app/views/hosts/_fd_config.html.erb
@@ -1,7 +1,7 @@
 <div class="col-xs-4">
-  <h3>Client FileDeamon Config</h3>
+  <h3>Client FileDaemon Config</h3>
   <pre class="pre">
-<%= @host.bacula_fd_filedeamon_config %>
+<%= @host.bacula_fd_filedaemon_config %>
   </pre>
 </div>
 <div class="col-xs-4">
