Remove all `host` appearances in front.
The end user will only see `clients`

--- a/app/views/admin/hosts/_host.html.erb
+++ b/app/views/admin/hosts/_host.html.erb
@@ -7,7 +7,7 @@
   <td>
     <%= link_to 'Verify', verify_admin_host_path(host), method: :post,
       class: "btn btn-success", role: "button",
-      data: { confirm: "Host #{host.name} will be ready to be dispatched to Bacula" }
+      data: { confirm: "Client #{host.name} will be ready to be dispatched to Bacula" }
     %>
   </td>
 </tr>
