--- a/app/views/admin/hosts/unverified.html.erb
+++ b/app/views/admin/hosts/unverified.html.erb
@@ -1,7 +1,7 @@
-<h1>Unverified Hosts</h1>
+<h1>Unverified Clients</h1>
 
 <% if @hosts.empty? %>
-  <h3>There are no hosts pending for approval</h3>
+  <h3>There are no clients pending for approval</h3>
 <% else %>
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
