--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -20,8 +20,8 @@
             <th>Created at</th>
             <th>Last login at</th>
             <th>Clients</th>
-            <th>Unverified hosts</th>
-            <th>Pending hosts</th>
+            <th>Unverified clients</th>
+            <th>Pending clients</th>
             <th>Admin</th>
             <th>Actions</th>
             <th>Ban</th>
