--- a/app/views/clients/restore.html.erb
+++ b/app/views/clients/restore.html.erb
@@ -45,7 +45,7 @@
       </div>
     <% else %>
       <div class="alert alert-warning">
-        <p>Can not issue a restore for this host. It has no successful backups</p>
+        <p>Can not issue a restore for this client. It does not have any successful backups</p>
       </div>
     <% end %>
 
