--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Host <%= @host.name %></h1>
+<h1>Edit Client <%= @host.name %></h1>
 
 <div class="container graybox">
   <%= render 'form' %>
