--- a/app/views/jobs/_job_details.html.erb
+++ b/app/views/jobs/_job_details.html.erb
@@ -10,7 +10,7 @@
         <td><%= @job.job_type %></td>
       </tr>
       <tr>
-        <td><b>Host</b></td>
+        <td><b>Client</b></td>
         <td><%= @host.name %></td>
       </tr>
       <tr>
