--- a/app/views/user_mailer/notify_admin.text.erb
+++ b/app/views/user_mailer/notify_admin.text.erb
@@ -1,7 +1,7 @@
-New Host pending admin approval.
+New Client pending admin approval.
 
 user: <%= @user.username %> <%= admin_user_url(@user.id) %>
-host <%= @host %>
+client: <%= @host %>
 
 <%= unverified_admin_hosts_url %>
 
