--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to 'New Client', new_host_path, class: 'btn btn-primary', role: 'button' %>
 </div>
 
-<h1>My Bacula Clients</h1>
+<h1>My Clients</h1>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-condensed">
@@ -28,7 +28,7 @@
 </div>
 
 <% if @hosts.any? %>
-  <h1>My Pending Hosts</h1>
+  <h1>My Pending Clients</h1>
 
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
