--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -23,7 +23,7 @@
       <div class="col-xs-offset-3 col-xs-2">
         <%= link_to fetch_vima_hosts_path, role: :button, class: 'btn btn-default' do %>
           <label class="glyphicon glyphicon-refresh text-primary"></label>
-          Fetch Hosts
+          Fetch Clients
         <% end %>
       </div>
     <% end %>
