--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3>New Host</h3>
+        <h3>New Client</h3>
       </div>
       <br />
       <%= render 'form' %>
