--- a/app/views/shared/_admin.html.erb
+++ b/app/views/shared/_admin.html.erb
@@ -6,7 +6,7 @@
     <%= link_to 'Clients', admin_clients_path %>
   <% end %>
   <%= content_tag(:li, active_class(unverified_admin_hosts_path, true)) do %>
-    <%= link_to 'Hosts', unverified_admin_hosts_path %>
+    <%= link_to 'Unverified Clients', unverified_admin_hosts_path %>
   <% end %>
   <%= content_tag(:li, { class: "dropdown #{active_class(admin_users_path)[:class]}" }) do %>
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
