--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -8,8 +8,10 @@
     <% else %>
       <%= f.text_field :fqdn, disabled: @host.persisted? %>
     <% end %>
-    <%= f.password_field :password, required: true, value: @host.password %>
-    <%= f.number_field :port, min: 1 %>
+    <% if @host.persisted? %>
+      <%= f.password_field :password, label: 'Token', value: @host.password %>
+      <%= f.number_field :port, min: 1 %>
+    <% end %>
     <% emails = (@host.users.pluck(:email) + @host.email_recipients).uniq.select(&:present?) %>
     <%= f.select :email_recipients, options_for_select(emails, @host.email_recipients), {},
                  multiple: true %>
@@ -17,7 +19,7 @@
 
   <div class="form-group">
     <div class="col-xs-offset-3 col-xs-2">
-      <%= f.submit class: 'btn btn-success' %>
+      <%= f.submit 'Submit', class: 'btn btn-success' %>
     </div>
     <% if current_user.vima? %>
       <div class="col-xs-offset-3 col-xs-2">
