Host password is now host token

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -37,7 +37,7 @@
           <th>Name</th>
           <th>FQDN</th>
           <th>Port</th>
-          <th>Password</th>
+          <th>Token</th>
           <th>FileRetention (days)</th>
           <th>JobRetention (days)</th>
           <th>Verified</th>
