--- a/app/views/hosts/_host_details.html.erb
+++ b/app/views/hosts/_host_details.html.erb
@@ -14,7 +14,7 @@
         <td><%= @host.port %></td>
       </tr>
       <tr>
-        <td><b>Password</b></td>
+        <td><b>Token</b></td>
         <td>********</td>
       </tr>
       <tr>
