--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -18,3 +18,16 @@
 
 
 <%= render partial: 'jobs/modals' %>
+
+<script type='text/javascript'>
+  var hash = document.location.hash;
+  var prefix = "tab_";
+  if (hash) {
+      $('.nav-tabs a[href="'+hash.replace(prefix,"")+'"]').tab('show');
+  }
+
+  // Change hash for page-reload
+  $('.nav-tabs a').on('shown', function (e) {
+      window.location.hash = e.target.hash.replace("#", "#" + prefix);
+  });
+</script>
