--- a/app/views/jobs/_job_template_details.html.erb
+++ b/app/views/jobs/_job_template_details.html.erb
@@ -13,11 +13,11 @@
   <td><%= job.client_after_run_file %></td>
   <td>
     <% if job.enabled? %>
-      <%= link_to 'Disable', toggle_enable_host_job_path(@host, job), method: :patch,
-        class: "btn btn-warning", role: "button" %>
+      <%= button_or_disabled(@host.blocked?, 'Disable', toggle_enable_host_job_path(@host, job),
+                             method: :patch, class: "btn btn-warning", role: "button") %>
     <% else %>
-      <%= link_to 'Enable', toggle_enable_host_job_path(@host, job), method: :patch,
-        class: "btn btn-info", role: "button" %>
+      <%= button_or_disabled(@host.blocked?, 'Enable', toggle_enable_host_job_path(@host, job),
+                             method: :patch, class: "btn btn-info", role: "button") %>
     <% end %>
   </td>
 </tr>
