--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -19,6 +19,6 @@
       </tbody>
     </table>
   </div>
-  <%= link_to 'Add Job', new_host_job_path(host_id: @host.id),
-    class: "btn btn-success", role: "button" %>
+  <%= button_or_disabled(@host.blocked?, 'Add Job', new_host_job_path(host_id: @host.id),
+                         class: "btn btn-success", role: "button") %>
 </div>
