--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -5,7 +5,7 @@
     <h3>Client Details</h3>
   </div>
   <div class="col-xs-6">
-    <h3>Bacula Jobs</h3>
+    <h3>Backup Jobs</h3>
   </div>
 </div>
 
