--- a/app/views/hosts/_header.html.erb
+++ b/app/views/hosts/_header.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <%= link_to 'Remove client', host_path(@host), method: :delete,
-    data: { confirm: 'This will remove the client from Bacula. Are you sure?' },
+    data: { confirm: 'This will remove your client from the Backup service. Are you sure?' },
     class: "btn btn-danger", role: "button" %>
 </div>
 
