--- a/app/views/user_mailer/notify_for_invitation.text.erb
+++ b/app/views/user_mailer/notify_for_invitation.text.erb
@@ -1,4 +1,4 @@
-You are invited to manage <%= @invitation.host.fqdn %> 's Bacula policy
+You are invited to manage <%= @invitation.host.fqdn %> 's Backups policy.
 
 To accept the invitation please follow the following link
 
