--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -1,7 +1,11 @@
-<h1>Edit Client <%= @host.name %></h1>
-
-<div class="container graybox">
-  <%= render 'form' %>
+<div class="row">
+  <div class="col-xs-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>Edit Client <%= @host.name %></h3>
+      </div>
+      <br />
+      <%= render 'form' %>
+    </div>
+  </div>
 </div>
-
-<%= link_to 'Back', host_path(@host) %>
