--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,13 +1,18 @@
 <div class="row">
-  <div class="col-xs-4">
+  <div class="col-xs-6">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3>New Client</h3>
+        <h3>New Client
+          <% if current_user.vima? %>
+            <%= link_to fetch_vima_hosts_path, role: :button, class: 'btn btn-default right' do %>
+              <label class="glyphicon glyphicon-refresh text-primary"></label>
+              Fetch Clients
+            <% end %>
+          <% end %>
+        </h3>
       </div>
       <br />
       <%= render 'form' %>
     </div>
   </div>
 </div>
-
-<%= link_to 'Back', clients_path %>
