--- a/app/views/hosts/_fd_config.html.erb
+++ b/app/views/hosts/_fd_config.html.erb
@@ -18,6 +18,9 @@
 </div>
 
 <div class='col-xs-10'>
-  <%= link_to 'Download Config', fd_config_host_path(@host, token: current_user.token),
-    class: "btn btn-success", role: "button", download: 'fd_config' %>
+  <%= link_to fd_config_host_path(@host, token: current_user.token),
+              class: "btn btn-default", role: "button", download: 'fd_config' do %>
+    <label class="glyphicon glyphicon-download-alt text-primary"></label>
+    Download Config
+  <% end %>
 </div>
