Remove blocked client warning from user

--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,4 +1,4 @@
-<%= notifier(@host.display_message) unless @host.deployed? %>
+<%= notifier(@host.display_message) unless @host.deployed? || @host.blocked? %>
 
 <%= render partial: 'header' %>
 
