Rearrange "Manage Client" button

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -18,8 +18,6 @@
   </div>
 </div>
 
-<br/>
-
-<%= link_to 'Back to clients', clients_path %>
+<%= render partial: 'actions' %>
 
 <%= render partial: 'jobs/modals' %>
