Provide helpful messages on client state label

--- a/app/views/admin/clients/_header.html.erb
+++ b/app/views/admin/clients/_header.html.erb
@@ -8,5 +8,5 @@
 
 <h2>
   <%= @client.name %>
-  <small><%= host_status_label(@client.host) %></small>
+  <%= host_status_label(@client.host) %>
 </h2>
