--- a/app/views/clients/_header.html.erb
+++ b/app/views/clients/_header.html.erb
@@ -6,5 +6,5 @@
 
 <h2>
   <%= @client.name %>
-  <small><%= host_status_label(@client.host) %></small>
+  <%= host_status_label(@client.host) %>
 </h2>
