--- a/app/views/hosts/_header.html.erb
+++ b/app/views/hosts/_header.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <h2>Configuration for <%= @host.name %>
-  <small><%= host_status_label(@host) %></small>
+  <%= host_status_label(@host) %>
 </h2>
 
 <br/>
