Add timepicker to schedules

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require jstree-default
  *= require bootstrap-chosen
  *= require dataTables.bootstrap.min
+ *= require jquery.timepicker.min
  *= require_tree .
  *= require_self
  */
