--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -23,7 +23,7 @@
       <p class="col-xs-10 col-xs-offset-1 help-block text-right">
 eg: first sun, second-fifth mon, mon-sat
       </p>
-      <%= r.text_field :time, placeholder: 'HH:MM', required: true %>
+      <%= r.text_field :time, placeholder: 'HH:MM', class: 'timepicker', required: true %>
       <hr />
     </div>
   <% end %>
