--- a/app/views/clients/logs.html.erb
+++ b/app/views/clients/logs.html.erb
@@ -2,36 +2,29 @@
 
 <div class='row'>
   <div class='col-xs-3'>
-    <h3>Logs <small>(<%= @logs.total_count %>)</small></h3>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-4">
-    <%= page_entries_info @logs, entry_name: 'log' %>
-  </div>
-  <div class="col-xs-4 right text-right">
-    <%= paginate @logs %>
+    <h3>Logs <small>(<%= @logs.count %>)</small></h3>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="table-responsive">
-      <table class="table table-striped table-bordered table-condensed">
-        <thead>
-          <tr>
-            <th>LogId</th>
-            <th>JobId</th>
-            <th>Job</th>
-            <th>Time</th>
-            <th>Text</th>
-          </tr>
-        </thead>
-        <tbody>
-          <%= render partial: 'log', collection: @logs %>
-        </tbody>
-      </table>
+    <div class="datatable-wrapper">
+      <div class="table-responsive">
+        <table id="logs" class="table table-striped table-bordered table-condensed">
+          <thead>
+            <tr>
+              <th>LogId</th>
+              <th>JobId</th>
+              <th>Job</th>
+              <th>Time</th>
+              <th class="no-order">Text</th>
+            </tr>
+          </thead>
+          <tbody>
+            <%= render partial: 'log', collection: @logs %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
