Filter admin logs by job id

--- a/app/views/admin/clients/logs.html.erb
+++ b/app/views/admin/clients/logs.html.erb
@@ -14,7 +14,7 @@
           <thead>
             <tr>
               <th>LogId</th>
-              <th>JobId<th>
+              <th>JobId</th>
               <th>Job</th>
               <th>Time</th>
               <th class="no-order">Text</th>
