Add tooltip to Job/File retention

--- a/app/views/clients/_pending_clients.html.erb
+++ b/app/views/clients/_pending_clients.html.erb
@@ -8,9 +8,15 @@
         <th>FQDN</th>
         <th>Port</th>
         <th>Token</th>
-        <th>FileRetention (days)</th>
-        <th>JobRetention (days)</th>
-        <th>Verified</th>
+        <th data-toggle="tooltip" title="Defines the length of time that the File records will be available">
+          File Retention <label class="glyphicon glyphicon-question-sign"></label>
+        </th>
+        <th data-toggle="tooltip" title="Defines the length of time that the Job records will be available">
+          Job Retention <label class="glyphicon glyphicon-question-sign"></label>
+        </th>
+        <th data-toggle="tooltip" title="Determines if a client is backups approved">
+          Verified <label class="glyphicon glyphicon-question-sign"></label>
+        </th>
         <th>Created At</th>
       </tr>
     </thead>
