--- a/app/views/jobs/_modals.html.erb
+++ b/app/views/jobs/_modals.html.erb
@@ -24,7 +24,7 @@
           <div class="panel-heading">Fileset "<%= fileset.name %>"</div>
           <div class="panel-body">
             <pre>
-<%= fileset.to_bacula_config_array.join("\n") %>
+<%= fileset.human_readable %>
             </pre>
           </div>
         </div>
