provide a human readable schedule

--- a/app/views/jobs/_job_details.html.erb
+++ b/app/views/jobs/_job_details.html.erb
@@ -26,7 +26,7 @@
         <tr>
           <td><b>Schedule</b></td>
           <td>
-            <pre><%= @job.schedule.to_bacula_config_array.join("\n") %></pre>
+            <pre><%= @job.schedule.human_readable %></pre>
           </td>
         </tr>
       <% end %>
