--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,17 +1,13 @@
-<h1>Edit Schedule: <%= @schedule.name %></h1>
-
 <div class="col-xs-5">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4>Edit Schedule</h4>
     </div>
 
-    <br />
-
     <%= render partial: 'form',
-      locals: { url: host_schedule_path(@host, @schedule.id, job_id: @job_id), method: :patch } %>
+      locals: { url: host_schedule_path(@host, @schedule.id, job_id: @job_id),
+                method: :patch } %>
   </div>
 </div>
 
-<%= link_to 'Back to job',
-  @job_id.present? ? edit_host_job_path(@host, @job_id) : new_host_job_path(@host) %>
+<%= render partial: 'level_explanation' %>
