--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,8 +1,11 @@
-<h1>New Schedule</h1>
+<div class="col-xs-5">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4>New Schedule</h4>
+    </div>
 
-<div class="container graybox">
-  <%= render partial: 'form', locals: { url: host_schedules_path(@host), method: :post } %>
+    <%= render partial: 'form', locals: { url: host_schedules_path(@host), method: :post } %>
+  </div>
 </div>
 
-<%= link_to 'Back to job',
-  @job_id.present? ? edit_host_job_path(@host, @job_id) : new_host_job_path(@host) %>
+<%= render partial: 'level_explanation' %>
