--- a/app/views/clients/logs.html.erb
+++ b/app/views/clients/logs.html.erb
@@ -8,6 +8,18 @@
 
 <div class="row">
   <div class="col-xs-12">
+    <%= bootstrap_form_tag(url: '', method: :get, layout: :inline) do |form| %>
+      <%= form.date_field :start_date, value: @dates[:start],
+        class: 'datepicker' %>
+      <%= form.text_field :end_date, value: @dates[:end],
+        class: 'datepicker' %>
+      <%= form.submit 'Show Logs', class: 'btn btn-default' %>
+    <% end %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
     <div class="datatable-wrapper">
       <div class="table-responsive">
         <table id="logs" class="table table-striped table-bordered table-condensed">
