--- a/app/views/hosts/edit.html.erb
+++ b/app/views/hosts/edit.html.erb
@@ -1,11 +1,13 @@
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3>Edit Client <%= @host.name %></h3>
       </div>
-      <br />
-      <%= render 'form' %>
+
+      <div class="panel-body">
+        <%= render 'form' %>
+    </div>
     </div>
   </div>
 </div>
