--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3>New Client
@@ -11,8 +11,10 @@
           <% end %>
         </h3>
       </div>
-      <br />
-      <%= render 'form' %>
+
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
     </div>
   </div>
 </div>
