Add alpha version indication to logo

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,7 +14,7 @@
         <li class="logo">
           <%= link_to root_path do %>
             <p><b>GRNET NOC</b></p>
-            <p>Archiving</p>
+            <p>Archiving <small class="text-success">[ Alpha ]</small></p>
           <% end %>
         </li>
         <% if current_user %>
