--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,35 +1,61 @@
-<div class="col-xs-4 col-xs-offset-4">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4>
-        <label class="glyphicon glyphicon-log-in"></label>
-        Login
-      </h4>
-    </div>
+<div class="row">
+  <div class="col-xs-4 col-xs-offset-2">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>
+          <label class="glyphicon glyphicon-cloud"></label>
+          &nbsp;
+          Welcome
+        </h4>
+      </div>
 
-    <br />
-    <div class="row">
-      <div class="col-xs-4 col-xs-offset-4 text-center">
-        <%= link_to 'ViMa User', vima_path(vima: 'vima'), method: :post, role: :button,
-          class: 'btn btn-default btn-lg', disabled: !Archiving.settings[:vima_oauth_enabled] %>
+      <div class="panel-body">
+        <p>Welcome to GRNET Archiving as a Service (AaaS)</p>
+
+        <p>If you are new to the service, take some time to explore its features in the hyperlink provided at the end of this page.</p>
+        <p>Service's procedures, requirements and features are also available.</p>
+
+        <p>Suggestions or problems should be reported to GRNET NOC's Helpdesk (<%= mail_to 'support@grnet.gr', 'support at grnet.gr' %>).</p>
+
+        <a href="https://grnet.gr/services/cloud-services/archiving/">Achiving as a Service</a>
       </div>
     </div>
-    <hr />
-    <div class="row">
-      <div class="col-xs-4 col-xs-offset-4 text-center">
-        <%= link_to 'Institutional User', institutional_path, role: :button,
-          class: 'btn btn-default btn-lg',
-          disabled: !Archiving.settings[:institutional_authentication_enabled] %>
+  </div>
+
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4>
+          <label class="glyphicon glyphicon-log-in"></label>
+          &nbsp;
+          Login
+        </h4>
+      </div>
+
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-4 col-xs-offset-4 text-center">
+            <%= link_to 'ViMa User', vima_path(vima: 'vima'), method: :post, role: :button,
+              class: 'btn btn-default btn-lg', disabled: !Archiving.settings[:vima_oauth_enabled] %>
+          </div>
+        </div>
+        <hr />
+        <div class="row">
+          <div class="col-xs-4 col-xs-offset-4 text-center">
+            <%= link_to 'Institutional User', institutional_path, role: :button,
+              class: 'btn btn-default btn-lg',
+              disabled: !Archiving.settings[:institutional_authentication_enabled] %>
+          </div>
+        </div>
+        <hr />
+        <div class="row">
+          <div class="col-xs-4 col-xs-offset-4 text-center">
+            <%= link_to 'Okeanos User', '', role: :button,
+              class: 'btn btn-default btn-lg',
+              disabled: !Archiving.settings[:okeanos_authentication_enabled] %>
+          </div>
+        </div>
       </div>
     </div>
-    <hr />
-    <div class="row">
-      <div class="col-xs-4 col-xs-offset-4 text-center">
-        <%= link_to 'Okeanos User', '', role: :button,
-          class: 'btn btn-default btn-lg',
-          disabled: !Archiving.settings[:okeanos_authentication_enabled] %>
-      </div>
-    </div>
-    <br />
   </div>
 </div>
