Add helper text on simple config page

--- a/app/views/simple_configs/new.html.erb
+++ b/app/views/simple_configs/new.html.erb
@@ -19,4 +19,18 @@
       </div>
     </div>
   </div>
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>Info</h3>
+      </div>
+      <div class="panel-body">
+        <p>This the basic Backup configuration.</p>
+        <p>Your server is going to receive daily backups, on the selected <strong>hour</strong> and <strong>minute</strong>.</p>
+        <p>The backup plan is optimized to have the minimum overhead to your system, while maintaining a high performance restore system.</p>
+        <p>The most time consuming backup will be on the selected <strong>day</strong>.</p>
+        <p>You can alter this configuration later on according to your specific needs.</p>
+      </div>
+    </div>
+  </div>
 </div>
